<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        tools:layout="@layout/place_autocomplete_fragment" />

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".domains.trails.creating.MapsActivity">

        <Button
            android:id="@+id/btn_savetrail"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/cardview_light_background"
            android:alpha="0.7"
            android:text="Save trail"
            android:textSize="12sp"
            android:layout_gravity="bottom|end"
            android:padding="10dp"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/btn_viewMarkers"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/cardview_light_background"
            android:alpha="0.7"
            android:text="See markers"
            android:textSize="12sp"
            android:layout_gravity="bottom|start"
            android:padding="10dp"
            android:layout_margin="10dp"
            />

    </fragment>



</LinearLayout>